my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ESYNTAX_old_array_1/ESYNTAX_old_array_1.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ESYNTAX_old_array_1.dml:8:8: error ESYNTAX: syntax error at '2'
